opam-version: "1.2.2"
version: "2.0"
maintainer: "alin.popa@gmail.com"
authors: ["Alin Popa"]
homepage: "https://github.com/alinpopa/tube"
bug-reports: "https://github.com/alinpopa/tube/issues"
dev-repo: "https://github.com/alinpopa/tube.git"
license: "LGPL-3 with OCaml linking exception"
build: [
  ["jbuilder" "build" "--only" "tube" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core"
  "lwt"
]
