opam-version: "2.0"
name: "tube"
version: "4.4.0"
maintainer: "alin.popa@gmail.com"
authors: ["Alin Popa"]
homepage: "https://github.com/alinpopa/tube"
bug-reports: "https://github.com/alinpopa/tube/issues"
dev-repo: "git+https://github.com/alinpopa/tube.git"
license: "LGPL-3.0-or-later with OCaml linking exception"
build: [
  ["dune" "build" "-p" "tube"]
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.0"}
  "lwt" {>= "2.4.7"}
]
descr: "Almost transparently slim type safe abstraction on top of Lwt_io channels"
